feat(menu): Provide endpoint to get menu detail
Related to #80
